# Aubio-LV2-Plugins

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  index.html
debian/: README.Debian  README.source  aubio-lv2.cron.d.ex  aubio-lv2.default.ex  aubio-lv2.doc-base.EX  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
src/: Makefile.am  Makefile.in  aubiolv2.h  lib.c  manifest.ttl  onset-plugin.c  onset-plugin.h  onset.ttl  tss-plugin.c  tss-plugin.h  tss.ttl
